--- a/insta-connect-ui/insta-connect-app/src/styles.scss
+++ b/insta-connect-ui/insta-connect-app/src/styles.scss
@@ -5,6 +5,12 @@
   padding-left: 15px !important;
 }
 
+.tooltip-class {
+  background: rgba(255, 255, 255, 0.2);
+  color:  rgba(0, 0, 0, 0.54) !important;
+  margin-bottom: 0px !important;
+}
+
 @import "~material-design-icons/iconfont/material-icons.css";
 .material-icons.md-18 {
   font-size: 18px;
